feat: native image build and setup (#10)
Add native build and setup

Ticket: ST-4518

---------

Co-authored-by: Ari von Nordenskjöld <ari@vnord.net>